Started working on lab 2, changed some typedefs due to Mac having that type already

--- a/Lab2/Makefile
+++ b/Lab2/Makefile
@@ -13,7 +13,7 @@ NON_BLOCKING_SUFFIX=-$(NON_BLOCKING)
 ## Forces assert() calls to be disabled when running measurements or when NDEBUG is defined to non-zero value. If DEBUG is defined to non-zero, tforward it and don't define NDEBUG unless MEASURE is also non-zero in which case DEBUG is not forwarded and NDEBUG is set to 1
 NDEBUG_FLAG=$(if $(patsubst 0,,$(MEASURE)),-DNDEBUG=1,$(if $(DEBUG),$(if $(patsubst 0,,$(DEBUG)),-DDEBUG=$(DEBUG),$(if $(NDEBUG),$(if $(patsubst 0,,$(NDEBUG)),-DNDEBUG=$(NDEBUG),-DDEBUG=$(DEBUG)),-DDEBUG=$(DEBUG))),$(if $(NDEBUG),$(if $(patsubst 0,,$(NDEBUG)),-DNDEBUG=1,),)))
 
-CFLAGS=-g -O0 -Wall -pthread -lrt -DNB_THREADS=$(NB_THREADS) -DNON_BLOCKING=$(NON_BLOCKING) -DMEASURE=$(MEASURE) -DMAX_PUSH_POP=$(MAX_PUSH_POP) $(NDEBUG_FLAG)
+CFLAGS=-g -O0 -Wall -pthread -DNB_THREADS=$(NB_THREADS) -DNON_BLOCKING=$(NON_BLOCKING) -DMEASURE=$(MEASURE) -DMAX_PUSH_POP=$(MAX_PUSH_POP) $(NDEBUG_FLAG)
 
 all: $(OUT)
 
