Lab 5 in progress

--- a/Lab3/src/Makefile.fillmein
+++ b/Lab3/src/Makefile.fillmein
@@ -2,7 +2,7 @@
 CONFIG = RELEASE
 
 ## Default number of threads
-NB_THREADS = 2
+NB_THREADS = 4 
 
 ## List of C++ files that hold your implementation of parallel sort
 ## Files must have etension .cpp
@@ -19,11 +19,11 @@ CXXFLAGS =
 CXX_LDFLAGS =
 
 ## Number of threads to compile
-NB_THREADS = 2
+NB_THREADS = 4
 
 ## Task graph description
-DRAKE_TASKGRAPH = merge-2.graphml
+DRAKE_TASKGRAPH = merge.graphml
 ## Drake target paltform description
-DRAKE_PLATFORM = platform-2.dat
+DRAKE_PLATFORM = platform.dat
 ## Drake schedule to use
 DRAKE_SCHEDULE = ## Let lpt generate a schedule
